--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^6.8.0"
+  },
+  "dependencies": {
+    "nodemailer": "^6.4.6"
   }
 }
